<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addToolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        app:titleMarginStart="110dp"
        app:titleTextColor="#000000" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/add_folder"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="676dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alata"
                android:text="@string/select_the_genre_category"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp" >

            <TextView
                android:id="@+id/textView30"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alata"
                android:text="@string/folder_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="389dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/custom_folder_name"
                android:textColor="#A5A5A5"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/newFolderButton"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/alata"
            android:text="@string/add_new_folder"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp"
            app:backgroundTint="#C5CAE9"
            app:cornerRadius="10dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>