<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/logo"
        android:visibility="visible"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/logo" />

    <Space
        android:layout_width="427dp"
        android:layout_height="39dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFEFE"
        android:fontFamily="sans-serif-black"
        android:text="@string/book_manor"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="Join for free today"
        android:textColor="#332E2E"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/create_an_account"
        android:textColor="#332E2E" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Agree to terms and conditions" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Create Account"
        android:textColor="#000000"
        app:backgroundTint="#ECE7F1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text=" Already have an account? Sign in"
        android:textColor="#000000" />

</LinearLayout>