<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal"
    android:background="#EEE9F4"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <!--Screen Scroll-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--TOP HEADER BAR-->

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="34dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="232dp">

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appColor"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:fontFamily="@font/alata"
                app:layout_constrainedHeight="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationContentDescription="menu_icon"
                app:navigationIcon="?attr/actionModeCloseDrawable"
                app:popupTheme="@style/Theme.BookManor"
                app:title="Genres"
                app:titleMargin="4dp"
                app:titleMarginStart="90dp"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
                app:titleTextColor="#000000" />


            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="411dp"
                android:layout_height="149dp"
                android:layout_marginTop="-170dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.cardview.widget.CardView
                    android:id="@+id/poetryCardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    android:focusable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="73dp"
                            android:layout_height="71dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="39dp"
                            android:layout_marginTop="22dp"
                            android:layout_marginEnd="258dp"
                            android:layout_marginBottom="16dp"
                            android:contentDescription="@string/genre_icon1"
                            app:srcCompat="@drawable/poetry_icon" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="86dp"
                            android:layout_marginBottom="29dp"
                            android:fontFamily="@font/alata"
                            android:foregroundGravity="center_vertical"
                            android:gravity="center_vertical"
                            android:text="@string/poetry"
                            android:textColor="@color/black"
                            android:textSize="34sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <!--GENRE BLOCK-->

            <!--GENRE BLOCK-->
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="411dp"
                android:layout_height="172dp"
                android:layout_marginBottom="331dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.0">


                <androidx.cardview.widget.CardView
                    android:id="@+id/fictionCardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="73dp"
                            android:layout_height="73dp"
                            android:layout_below="@id/defaultGenre2"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="-7dp"
                            android:layout_marginEnd="260dp"
                            android:contentDescription="genre_icon2"
                            app:srcCompat="@drawable/fiction_icon"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="157dp"
                            android:layout_height="53dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="154dp"
                            android:layout_marginTop="37dp"
                            android:layout_marginEnd="60dp"
                            android:layout_marginBottom="43dp"
                            android:fontFamily="@font/alata"
                            android:text="@string/fiction"
                            android:textColor="@color/black"
                            android:textSize="34sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="411dp"
                android:layout_height="172dp"
                android:layout_marginBottom="181dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.0">


                <androidx.cardview.widget.CardView
                    android:id="@+id/romanceCradView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="73dp"
                            android:layout_height="73dp"
                            android:layout_below="@id/defaultGenre4"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="259dp"
                            android:contentDescription="genre_icon3"
                            app:srcCompat="@drawable/love_icon" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="188dp"
                            android:layout_height="60dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="156dp"
                            android:layout_marginTop="36dp"
                            android:layout_marginEnd="27dp"
                            android:layout_marginBottom="39dp"
                            android:fontFamily="@font/alata"
                            android:text="@string/romance"
                            android:textColor="@color/black"
                            android:textSize="34sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!--GENRE BLOCK-->

            <!--ProfileButton-->
            <LinearLayout
                android:layout_width="411dp"
                android:layout_height="172dp"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/comedyCardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="73dp"
                            android:layout_height="73dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="46dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="250dp"
                            android:layout_marginBottom="29dp"
                            android:contentDescription="genre_icon3"
                            app:srcCompat="@drawable/humor_icon" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="38dp"
                            android:layout_marginEnd="65dp"
                            android:layout_marginBottom="43dp"
                            android:fontFamily="@font/alata"
                            android:text="@string/comedy"
                            android:textColor="@color/black"
                            android:textSize="34sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/add_genres"
            android:keepScreenOn="true"
            app:backgroundTint="@color/appColor"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>